# up7_demo

./: .gitignore  README.md
up7_client/: .mxproject  CMakeLists.txt  Makefile  cmake_build.bat  cmake_build.sh  gcc_cm4f.cmake  stm32cube.cmake  up7_client.ioc
up7_client/App/: app_main.c  app_main.h  telem.c  telem.h
up7_client/Core/Inc/: main.h  stm32f4xx_it.h  tim.h
up7_client/Core/Src/: gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c
up7_client/USB_DEVICE/App/: usbd_desc.c
up7_client/up7/lib/: uP7.c  uP7context.h  uP7hash.h  uP7platform.h  uP7protocol.h
up7_client/up7/preproc/: uP7IDs.h  uP7preprocessed.h  up7_client.up7  up7_preproc.xml
up7_utils/: CMakeLists.txt  cmake_build.bat  cmake_build.sh
up7_utils/P7lib/Headers/: CMakeLists.txt  GTypes.h  P7_Client.h  P7_Cproxy.h  P7_Extensions.h  P7_Telemetry.h  P7_Trace.h  P7_Version.h
up7_utils/P7lib/Shared/: AList.h  CMakeLists.txt  CRC32.h  DnsResolver.h  IConsole.h  IFile.h  IJournal.h  IMEvent.h  IPerformanceInfo.h  ISignal.h  Length.h  Lock.h  Predicate.h  QStringHelper.h  RBTree.h  RingBuffer.h  SharedLib.h  Ticks.h  UDP_NB.h  UTF.h  WString.h
up7_utils/P7lib/Sources/: CRC32.cpp  ClBaical.cpp  ClBaical.h  ClFile.cpp  ClFile.h  ClNull.cpp  ClNull.h  ClText.cpp  ClText.h  ClTextConsole.h  ClTextFile.h  ClTextSink.h  ClTextSyslog.h  Client.cpp  Client.h  Common.h  CommonClient.h  Formatter.h  PacketsPool.h  Proxy.cpp  TPackets.h  Telemetry.cpp  Telemetry.h  Trace.cpp  Trace.h  resource.h  targetver.h
up7_utils/uP7lib/: CMakeLists.txt
up7_utils/uP7lib/Headers/: CMakeLists.txt  uP7.h  uP7helpers.h  uP7version.h
up7_utils/uP7lib/Source/: CMakeLists.txt
up7_utils/uP7preProcessor/: CMakeLists.txt  Keccak.h  crc7.h  uP7preCommon.h  uP7preConfig.h  uP7preDefines.h  uP7preFile.cpp  uP7preFile.h  uP7preFunction.cpp  uP7preFunction.h  uP7preManager.cpp  uP7preManager.h  uP7preProcessor.cpp  uP7preTools.h  uP7sessionFile.cpp  uP7sessionFile.h
up7_utils/uP7preProcessor/cfg/: BNode.cpp  BNode.h  INode.h  pugiconfig.hpp  pugixml.cpp  pugixml.hpp
up7_utils/uP7proxyLib/: CMakeLists.txt
up7_utils/uP7proxyLib/Headers/: CMakeLists.txt  uP7proxyApi.h
up7_utils/uP7proxyLib/Source/: CMakeLists.txt  uP7Fifo.cpp  uP7Fifo.h  uP7chunks.h  uP7common.h  uP7proxy.cpp  uP7proxy.h  uP7proxyClient.h  uP7proxyCpu.cpp  uP7proxyCpu.h  uP7proxyLinearPool.h  uP7proxyPreprocessor.h  uP7proxyStream.cpp  uP7proxyStream.h  uP7proxyTelemetry.cpp  uP7proxyTelemetry.h  uP7proxyTrace.cpp  uP7proxyTrace.h
up7_utils/up7_serial_proxy/: CMakeLists.txt  main_linux.cpp  main_win.cpp
